tests/fixtures/invalid/conflicting_function_prototype.c
int helper(int value);
void helper(int value);

int main() {
    return helper(1);
}

int helper(int value) {
    return value;
}
